fixed image size overflow

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -76,7 +76,12 @@ body {
 .Article {
   margin: 8px;
   padding: 4px;
+  /* max-width: 100%; */
   background-color: #505050;
+}
+.article__image {
+  max-width: 100%;
+  max-height: 512px;
 }
 .nav__featuredPosts {
   max-width: 128px;
